--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "babel-loader": "^8.0.0-beta.0",
     "babel-plugin-import": "1.8.0",
     "classnames": "2.2.6",
+    "color": "3.0.0",
     "connected-react-router": "4.4.1",
     "css-loader": "1.0.0",
     "cssnano": "4.1.0",
